# pbpstats

./: .gitignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  README.md  pyproject.toml  repomix.config.json  tox.ini
bench/: bench_ft.py
context/: FILE_INDEX.md  REPO_ARCHITECTURE.md  REPO_ARCHITECTURE_SYNC.json  START_HERE.md
docs/: conf.py  index.rst  pbpstats.offline.rst  pbpstats.rst  quickstart.rst  rapm_guide.rst  usage_overview.rst
historic_backfill/: 0c2_build_tpdev_box_stats_version_v9b.py  AGENTS.md  MIGRATION_EXCLUDED.md  MIGRATION_MAP.md  PROJECT_HISTORY.md  README.md  RERUN.md  audit_0021600056_shot_source_conflict.py  audit_all_columns.py  audit_event_player_on_court.py  audit_fork_repair_usage.py  audit_lineup_possession_starts_against_tpdev.py  audit_minutes_plus_minus.py  audit_no_turnover_gate.py  audit_off_lineup_player_events.py  audit_period_starters_against_tpdev.py  bbr_boxscore_loader.py  bbr_pbp_lookup.py  block_A_exception_queue_20260321_v1.md  block_A_manual_override_diagnostic_20260321.md  boxscore_audit.py  boxscore_audit_overrides.csv  boxscore_source_overrides.csv  boxscore_source_overrides.py  build_event_on_court_family_register.py  build_fork_repair_catalog.py  build_fork_repair_disposition_report.py  build_intraperiod_baseline_bundle.py  build_intraperiod_manual_review_registry.py  build_large_minute_outlier_family_register.py  build_large_minute_outlier_triage.py  build_lineup_residual_outputs.py  build_minutes_cross_source_report.py  (+62 more)
nba_stats_parser/: README.md  pyproject.toml
nba_stats_parser/nba_stats_parser/: __init__.py  fetcher.py  models.py  outputs.py  parser.py
pbpstats/: __init__.py  (+2 more)
(+323 files in other folders)
