[tool.black]
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["pbpstats/resources/enhanced_pbp/__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "historic_backfill/tests"]

[tool.poetry]
name = "pbpstats"
version = "1.3.11"
description = "A package to scrape and parse NBA, WNBA and G-League play-by-play data"
authors = ["kmedved <bibigon@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.27.1"
pandas = ">=2.0"
numpy = ">=1.24"
pyarrow = ">=14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
responses = "^0.18.0"
furl = "^2.1.3"
pre-commit = "^4.2.0"
black = "^24.10.0"
flake8 = "^4.0.1"
isort = "^5.13.2"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
tox = "^3.24.5"
tox-gh-actions = "^2.9.1"
tiktoken = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
